--- a/AoC2022.fsproj
+++ b/AoC2022.fsproj
@@ -8,8 +8,14 @@
     <ItemGroup>
         <Compile Include="Utils.fs" />
         <Compile Include="Day1.fs" />
+        <Compile Include="Tests.fs" />
         <Compile Include="Program.fs" />
         <Folder Include="input" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="FsUnit.xUnit" Version="5.1.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
     </ItemGroup>
 
 </Project>
