--- a/AoC2022.fsproj
+++ b/AoC2022.fsproj
@@ -10,6 +10,7 @@
         <Compile Include="Day1.fs" />
         <Compile Include="Day2.fs" />
         <Compile Include="Day3.fs" />
+        <Compile Include="Day4.fs" />
         <Compile Include="Tests.fs" />
         <Compile Include="Program.fs" />
         <Content Include="input\test1.txt" />
@@ -17,6 +18,7 @@
         <Content Include="input\test2.txt" />
         <Content Include="input\2.txt" />
         <Content Include="input\test3.txt" />
+        <Content Include="input\3.txt" />
     </ItemGroup>
 
     <ItemGroup>
