Solve day 5 part 1

--- a/AoC2022.fsproj
+++ b/AoC2022.fsproj
@@ -22,6 +22,8 @@
         <Content Include="input\3.txt" />
         <Content Include="input\test4.txt" />
         <Content Include="input\4.txt" />
+        <Content Include="input\5.txt" />
+        <Content Include="input\test5.txt" />
     </ItemGroup>
 
     <ItemGroup>
