--- a/AoC2022.fsproj
+++ b/AoC2022.fsproj
@@ -24,8 +24,11 @@
         <Content Include="input\3.txt" />
         <Content Include="input\test4.txt" />
         <Content Include="input\4.txt" />
-        <Content Include="input\5.txt" />
         <Content Include="input\test5.txt" />
+        <Content Include="input\5.txt" />
+        <Content Include="input\6.txt" />
+        <Content Include="input\test7.txt" />
+        <Content Include="input\7.txt" />
     </ItemGroup>
 
     <ItemGroup>
