--- a/AoC2022.fsproj
+++ b/AoC2022.fsproj
@@ -30,6 +30,8 @@
         <Content Include="input\6.txt" />
         <Content Include="input\test7.txt" />
         <Content Include="input\7.txt" />
+        <Content Include="input\test8.txt" />
+        <Content Include="input\8.txt" />
     </ItemGroup>
 
     <ItemGroup>
