--- a/AoC2022.fsproj
+++ b/AoC2022.fsproj
@@ -16,6 +16,7 @@
         <Compile Include="Day7.fs" />
         <Compile Include="Day8.fs" />
         <Compile Include="Day9.fs" />
+        <Compile Include="Day10.fs" />
         <Compile Include="Tests.fs" />
         <Compile Include="Program.fs" />
         <Content Include="input\test1.txt" />
@@ -34,6 +35,7 @@
         <Content Include="input\test8.txt" />
         <Content Include="input\8.txt" />
         <Content Include="input\test9.txt" />
+        <Content Include="input\test10.txt" />
     </ItemGroup>
 
     <ItemGroup>
