--- a/AoC2022.fsproj
+++ b/AoC2022.fsproj
@@ -18,6 +18,7 @@
         <Compile Include="Day9.fs" />
         <Compile Include="Day10.fs" />
         <Compile Include="Day11.fs" />
+        <Compile Include="Day12.fs" />
         <Compile Include="Tests.fs" />
         <Compile Include="Program.fs" />
         <Content Include="input\test1.txt" />
@@ -40,6 +41,8 @@
         <Content Include="input\test11.txt" />
         <Content Include="input\10.txt" />
         <Content Include="input\11.txt" />
+        <Content Include="input\test12.txt" />
+        <Content Include="input\12.txt" />
     </ItemGroup>
 
     <ItemGroup>
