--- a/AoC2022.fsproj
+++ b/AoC2022.fsproj
@@ -19,6 +19,7 @@
         <Compile Include="Day10.fs" />
         <Compile Include="Day11.fs" />
         <Compile Include="Day12.fs" />
+        <Compile Include="Day13.fs" />
         <Compile Include="Tests.fs" />
         <Compile Include="Program.fs" />
         <Content Include="input\test1.txt" />
@@ -43,9 +44,11 @@
         <Content Include="input\11.txt" />
         <Content Include="input\test12.txt" />
         <Content Include="input\12.txt" />
+        <Content Include="input\test13.txt" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FSharp.Data" Version="6.0.1-beta001" />
       <PackageReference Include="FsUnit.xUnit" Version="5.1.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
     </ItemGroup>
