--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,10 @@ build:
     - uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '7.0.x'
-    - name: Build with dotnet
       run: dotnet build --configuration Release
+
+test:
+  steps:
+    - uses: build
     - name: Test with dotnet
       run: dotnet test
