--- a/AoC2022.fsproj
+++ b/AoC2022.fsproj
@@ -21,6 +21,7 @@
         <Compile Include="Day12.fs" />
         <Compile Include="Day13.fs" />
         <Compile Include="Day14.fs" />
+        <Compile Include="Day15.fs" />
         <Compile Include="Tests.fs" />
         <Compile Include="Program.fs" />
         <Content Include="input\test1.txt" />
@@ -47,6 +48,7 @@
         <Content Include="input\12.txt" />
         <Content Include="input\test13.txt" />
         <Content Include="input\test14.txt" />
+        <Content Include="input\test15.txt" />
     </ItemGroup>
 
     <ItemGroup>
