--- a/AoC2022.fsproj
+++ b/AoC2022.fsproj
@@ -52,6 +52,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FSharp.Collections.ParallelSeq" Version="1.2.0" />
       <PackageReference Include="FSharp.Data" Version="6.0.1-beta001" />
       <PackageReference Include="FsUnit.xUnit" Version="5.1.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
