--- a/AoC2022.fsproj
+++ b/AoC2022.fsproj
@@ -23,6 +23,7 @@
         <Compile Include="Day14.fs" />
         <Compile Include="Day15.fs" />
         <Compile Include="Day16.fs" />
+        <Compile Include="Day17.fs" />
         <Compile Include="Tests.fs" />
         <Compile Include="Program.fs" />
         <Content Include="input\test1.txt" />
@@ -51,6 +52,7 @@
         <Content Include="input\test14.txt" />
         <Content Include="input\test15.txt" />
         <Content Include="input\test16.txt" />
+        <Content Include="input\test17.txt" />
     </ItemGroup>
 
     <ItemGroup>
