--- a/AoC2022.fsproj
+++ b/AoC2022.fsproj
@@ -25,6 +25,7 @@
         <Compile Include="Day16.fs" />
         <Compile Include="Day17.fs" />
         <Compile Include="Day18.fs" />
+        <Compile Include="Day19.fs" />
         <Compile Include="Tests.fs" />
         <Compile Include="Program.fs" />
         <Content Include="input\test1.txt" />
@@ -55,6 +56,7 @@
         <Content Include="input\test16.txt" />
         <Content Include="input\test17.txt" />
         <Content Include="input\test18.txt" />
+        <Content Include="input\test19.txt" />
     </ItemGroup>
 
     <ItemGroup>
