--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,5 +24,7 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
+    - name: Download input files
+      run: pwsh ./download_inputfiles.ps1
     - name: Test
       run: dotnet test --no-build --verbosity normal
