--- a/AoC2022.fsproj
+++ b/AoC2022.fsproj
@@ -60,6 +60,8 @@
         <Content Include="input\test19.txt" />
         <Content Include="input\test20.txt" />
         <Content Include="input\20.txt" />
+        <Content Include="download_inputfiles.ps1" />
+        <Content Include=".github\workflows\dotnet.yml" />
     </ItemGroup>
 
     <ItemGroup>
