--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,6 +26,6 @@ jobs:
       run: dotnet build --no-restore
     - name: Download input files
       shell: pwsh
-      run: $GITHUB_WORKSPACE/download_inputfiles.ps1
+      run: ./download_inputfiles.ps1
     - name: Test
       run: dotnet test --no-build --verbosity normal
