--- a/AoC2022.fsproj
+++ b/AoC2022.fsproj
@@ -27,6 +27,7 @@
         <Compile Include="Day18.fs" />
         <Compile Include="Day19.fs" />
         <Compile Include="Day20.fs" />
+        <Compile Include="Day21.fs" />
         <Compile Include="Tests.fs" />
         <Compile Include="Program.fs" />
         <Content Include="input\test1.txt" />
@@ -60,6 +61,7 @@
         <Content Include="input\test19.txt" />
         <Content Include="input\test20.txt" />
         <Content Include="input\20.txt" />
+        <Content Include="input\test21.txt" />
         <Content Include="download_inputfiles.ps1" />
         <Content Include=".github\workflows\dotnet.yml" />
     </ItemGroup>
